Fix node image jumping, update dates, token page, support section
- Anchor node image to top so it doesn't jump when advanced panel opens
- ZAP core contract deployment date: March 25, 2026
- Hide "Public Auction:" super-title on calculator page
- Replace igra-token participate section with sale announcement link
- Add X account to support section

--- a/src/pages/IgraTokenPage/IgraTokenPage.module.scss
+++ b/src/pages/IgraTokenPage/IgraTokenPage.module.scss
@@ -87,21 +87,13 @@
             }
         }
 
-        .interested {
-            font-family: $font-secondary;
-            font-size: 36px;
-            line-height: 44px;
-            font-weight: 400;
-            color: #FFFFFF;
+        .contactLink {
+            color: #6BD1C3;
+            text-decoration: none;
+            transition: text-decoration 0.2s;
 
-            .contactLink {
-                color: #6BD1C3;
-                text-decoration: none;
-                transition: text-decoration 0.2s;
-
-                &:hover {
-                    text-decoration: underline;
-                }
+            &:hover {
+                text-decoration: underline;
             }
         }
     }
